2008-02-01  Brian Dessent  <brian@dessent.net>

	* Makefile.in: Add rules to generate multiple versions of libmoldname.a for
	the different runtime versions.

2007-12-27 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.14.

2007-11-26  Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Add libmsvcr90.a and libmsvcr90d.a targets.
	* msvcrt.def.in: Add support for __msvcr90__ and __msvcr90d__ defines.
	* mingwex/math/log10f.S: Correct issue with comments.
	* mingwex/math/log10l.S: Ditto.
	* mingwex/math/log1p.S: Ditto.
	* mingwex/math/log1pf.S: Ditto.
	* mingwex/math/log1pl.S: Ditto.
	* mingwex/math/log2.S: Ditto.
	* mingwex/math/log2f.S: Ditto.
	* mingwex/math/log2l.S: Ditto.
	* mingwex/math/logf.S: Ditto.
	* mingwex/math/logl.S: Ditto.

2007-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/gdtoa/mingw_snprintf.c: fixed warning during compile.

2007-10-03  Bernd Becker <hugin@users.sourceforge.net>

	* include/io.h (__finddata64_t, __wfinddata64_t): changed member 'size'
	from '_fsize_t' to '__int64' to be consistent with the other ...64
	structures and the value set there is 8 bytes not 4.  Add guard for both
	as the are only used by functions available from 6.1 on.

	* include/malloc.h (_HEAP_MAXREQ): Define.
	(_aligned_offset_recalloc): Define.
	(_aligned_recalloc()): Define.

	* include/math.h: fixed a typo in a comment.
	(atanhf): Fixed declaration.

	* include/wchar.h (__wfinddata64_t): changed member 'size' from '_fsize_t'
	to '__int64' to be consistent with the other ...64 structures and the value
	set there is 8 bytes not 4.  Added guard as this function is only used by
	functions available from 6.1 on.

	* include/sys/stat.h: some members of 'stat' were declared with types with
	a prefixed underscore, while the ones without the underscore should have
	been used.  Added guard to '__stat64' as it is only used by functions